k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-node
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: docker-node
  template: 
    metadata:
      labels:
        app: docker-node
    spec: 
      containers: 
        - name: docker-node-container
          image: askarmadanov/node-app:17
          ports:
            - containerPort: 8080
