k8s/service-3.yaml
apiVersion: v1
kind: Service
metadata: 
  name: docker-node-3
spec:
  type: NodePort
  ports: 
    - port: 80
      targetPort: 8080
  selector: 
    app: docker-node
