k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: docker-node-1
spec:

  ports: 
    - port: 80
      targetPort: 8080
  selector: 
    app: docker-node
