k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
        nginx.ingress.kubernetes.io/rewrite-target: /$2
    name: docker-node-ingress
    namespace: docker-node
spec:
    rules: 
        - http:
            paths: 
                - path: /app1
                  pathType: prefix
                  backend:
                    service:
                        name: docker-node-1
                        port:
                            number: 80
                - path: /app2
                  pathType: prefix
                  backend:
                    service:
                        name: docker-node-2
                        port:
                            number: 80
